# health-os

./: .gitignore  README.md  package-lock.json  package.json  start-backend.sh
.github/workflows/: release.yml
ai-engine/: app.py  app.spec  build.py  build_minimal.py  requirements-build.txt  requirements.txt
src/: app.html
src-tauri/: Cargo.toml  scratch.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
