[package]
name = "health-os"
version = "1.0.0"
description = "HealthOS Posture Monitor — privacy-first on-device posture detection"
authors = ["HealthOS"]
edition = "2021"

[lib]
name = "health_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener        = "2"
tauri-plugin-autostart     = "2"
tauri-plugin-shell         = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
